Updated the reg and auth routes

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,28 @@ PORT=3000
 
 # CORS Configuration
 CORS_ORIGIN=*
+
+JWT_SECRET=5641654894561315641
+JWT_EXPIRES_IN=1d
+
+# Database Configuration
+DATABASE_HOST=dpg-d3v67g6r433s73cliapg-a.oregon-postgres.render.com
+DATABASE_PORT=5432
+DATABASE_NAME=instavision_db
+DATABASE_USER=instavision_db_user
+DATABASE_PASSWORD=1YCZXcdOJo2K1QxkDwQKcrcn3FpQa4Zj
+DATABASE_URL=postgresql://instavision_db_user:1YCZXcdOJo2K1QxkDwQKcrcn3FpQa4Zj@dpg-d3v67g6r433s73cliapg-a.oregon-postgres.render.com:5432/instavision_db
+
+
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=admin@instavision.com
+ADMIN_PASSWORD=admin123
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=pawaratharva808@gmail.com
+EMAIL_PASS=czvg phqr rztk mmcw
+
+# Frontend URL (for email links)
+FRONTEND_URL=http://localhost:3000
